Wed Mar  2 19:53:44 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (parse_args): return false if nothing matched.

Wed Mar  2 17:15:08 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c (lib_eventloop_core): fix typo

Wed Mar  2 16:59:50 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* eval.c (ruby_native_thread_kill): call pthread_kill() to send a
	  signal to ruby's native thread

	* ruby.h: add definition of ruby_native_thread_kill()

	* signal.c (sigsend_to_ruby_thread): send the signal to ruby's
	  native thread ([ruby-dev:25744], [ruby-dev:25754]), and set
	  signal mask to the current native thread

Wed Mar  2 16:03:08 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c: enforce thread-check and exception-handling to
	  avoid SEGV trouble.

	* ext/tk/tkutil/tkutil.c; fix a bug on converting a SJIS string array
	  to a Tcl's list string.

	* ext/tk/tcltklib.c: wrap Tcl's original "namespace" command to
	  protect from namespace crash.

	* ext/tk/lib/multi-tk.rb: enforce exception-handling.

	* ext/tk/lib/multi-tk.rb: catch IRB_EXIT to work on irb.

	* ext/tk/lib/tk.rb: ditto.

	* ext/tk/tcltklib.c: add TclTkLib.mainloop_thread?

	* ext/tk/lib/multi-tk.rb: (bug fix) callback returns a value.

	* ext/tk/lib/tk/canvas.rb (delete): bug fix when multiple arguments.

	* ext/tk/lib/clock.rb: fix 'no method error'.

	* ext/tk/lib/clock.rb (self.clicks): accept a Symbol argument.

	* ext/tk/lib/variable.rb: be able to set default_value_type; :numeric,
	  :bool, :string, :symbol, :list, :numlist or nil (default; same to
	  :string). If set a type, TkVariable#value returns a value of the
	  type.

	* ext/tk/lib/tkextlib/tclx/tclx.rb: add Tk::TclX.signal to warn the
	  risk of using TclX extension's 'signal' command.

	* ext/tk/sample/irbtk.rb: irb with Ruby/Tk.

	* ext/tk/sample/demos-*/anilabel.rb: bug fix on 'show code'

	* ext/tk/sample/demos-*/aniwave.rb: new Ruby/Tk animation demo.
